Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/204
  Fix bpo-24596 for Stackless too.

- https://github.com/stackless-dev/stackless/issues/200
  Fix a bug in the C-API functions PyTasklet_Run_nr() and
  PyTasklet_Switch_nr(). Under exotic conditions the functions could
  cause undefined behavior.

- https://github.com/stackless-dev/stackless/issues/193
  Fix the macros PyTasklet_CheckExact(op) and PyChannel_CheckExact(op).
  Previously they contained a reference to a non existing variable.

- https://github.com/stackless-dev/stackless/issues/182
  Fix "make teststackless" for out of tree builds


What's New in Stackless 3.6.5 and 3.6.6?
========================================

*Release date: 2018-09-12*  (3.6.6)
*Release date: 2018-09-11*  (3.6.5)

- https://github.com/stackless-dev/stackless/issues/168
  Make Stackless compatible with old Cython extension modules compiled
  for regular C-Python.

- https://github.com/stackless-dev/stackless/issues/166
  Fix C-API functions PyEval_EvalFrameEx() and PyEval_EvalFrame().
  They are now compatible with C-Python.

- https://github.com/stackless-dev/stackless/issues/167
  Replace 'printf(...)' calls by PySys_WriteStderr(...). They are used to emit
  an error message, if there is a pending error while entering Stackless
  subsystem.

- https://github.com/stackless-dev/stackless/issues/154
  Fix a minor bug in STACKLESS_PROMOTE_WRAPPER and STACKLESS_PROMOTE_METHOD.

- https://github.com/stackless-dev/stackless/issues/150
  The prototype of PyStackless_GetCurrentId(void) was missing from
  stackless_api.h. It is now defined.


What's New in Stackless 3.6.4?
==============================

*Release date: 2017-12-21*

- https://github.com/stackless-dev/stackless/issues/146